fixing height issues on small screen 30

--- a/06-modal/final/styles.css
+++ b/06-modal/final/styles.css
@@ -82,10 +82,10 @@ a {
   text-decoration: none;
 }
 img:not(.logo) {
-  /* width: 100%; */
+  width: 100%;
 }
 img {
-  /* display: block; */
+  display: block;
 }
 
 h1,
