--- a/06-modal/tryout/styles.css
+++ b/06-modal/tryout/styles.css
@@ -139,116 +139,132 @@ p {
 /*  global classes */
 
 .btn {
-  text-transform: uppercase;
-  background: transparent;
-  color: var(--clr-black);
-  padding: 0.375rem 0.75rem;
-  letter-spacing: var(--spacing);
-  display: inline-block;
-  transition: var(--transition);
-  font-size: 0.875rem;
-  border: 2px solid var(--clr-black);
-  cursor: pointer;
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
-  border-radius: var(--radius);
-}
-.btn:hover {
-  color: var(--clr-white);
-  background: var(--clr-black);
-}
-/* section */
-.section {
-  padding: 5rem 0;
-}
-
-.section-center {
-  width: 90vw;
-  margin: 0 auto;
-  max-width: 1170px;
-}
-@media screen and (min-width: 992px) {
-  .section-center {
-    width: 95vw;
+  /* border: 1px dashed #497844; */
+    text-transform: uppercase;
+    background: transparent;
+    color: var(--clr-black);
+    padding: 0.375rem 0.75rem;
+    letter-spacing: var(--spacing);
+    display: inline-block;
+    transition: var(--transition);
+    font-size: 0.875rem;
+    border: 2px solid var(--clr-black);
+    cursor: pointer;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
+    border-radius: var(--radius);
   }
-}
-main {
-  min-height: 100vh;
-  display: grid;
-  place-items: center;
-}
-/*
-=============== 
-Modal
-===============
-*/
-.hero {
-  min-height: 100vh;
-  background: url("./hero.jpeg") center/cover no-repeat;
-  display: grid;
-  place-items: center;
-}
-.banner {
-  background: var(--clr-white);
-  padding: 4rem 0;
-  border-radius: var(--radius);
-  box-shadow: var(--light-shadow);
-  text-align: center;
-  width: 90vw;
-  max-width: var(--fixed-width);
-}
-.modal-btn {
-  margin-top: 2rem;
-  background: var(--clr-primary-5);
-  border-color: var(--clr-primary-5);
-  color: var(--clr-white);
-}
-.modal-btn:hover {
-  background: transparent;
-  color: var(--clr-primary-5);
-}
-/* HIDDEN BY DEFAULT */
-.modal-overlay {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(73, 166, 233, 0.5);
-  display: grid;
-  place-items: center;
-  transition: var(--transition);
-  /*these css rules hide the modal*/
-  visibility: hidden;
-  z-index: -10;
-}
-/* OPEN/CLOSE MODAL ON CLICKED */
-.open-modal {
-  visibility: visible;
-  z-index: 10;
-}
-.modal-container {
-  background: var(--clr-white);
-  border-radius: var(--radius);
-  width: 90vw;
-  height: 30vh;
-  max-width: var(--fixed-width);
-  text-align: center;
-  display: grid;
-  place-items: center;
-  position: relative;
-}
-.close-btn {
-  position: absolute;
-  top: 1rem;
-  right: 1rem;
-  font-size: 2rem;
-  background: transparent;
-  border-color: transparent;
-  color: var(--clr-red-dark);
-  cursor: pointer;
-  transition: var(--transition);
-}
-.close-btn:hover {
-  color: var(--clr-red-light);
-  transform: scale(1.3);
-}
+  .btn:hover {
+  /*border: 1px dashed #8FD081;*/
+    color: var(--clr-white);
+    background: var(--clr-black);
+  }
+  /* section */
+  .section {
+  /*border: 1px dashed #A562CC;*/
+  /*   padding: 5rem 0;*/
+  }
+  
+  .section-center {
+  /*border: 1px dashed #477899;*/
+  /*   width: 90vw;*/
+  /*   margin: 0 auto;*/
+  /*   max-width: 1170px;*/
+  }
+  @media screen and (min-width: 992px) {
+  /*border: 1px dashed #699F8D;*/
+    .section-center {
+  /*border: 1px dashed #A5B272;*/
+  /*     width: 95vw;*/
+    }
+  }
+  main {
+  /*border: 1px dashed #E15052;*/
+  /*   min-height: 100vh;*/
+  /*   display: grid;*/
+  /*   place-items: center;*/
+  }
+  /*
+  =============== 
+  Modal
+  ===============
+  */
+  .hero {
+  /* border: 1px dashed #C20BA5; */
+    min-height: 100vh;
+    background: url("./hero.jpeg") center/cover no-repeat;
+    display: grid;
+    place-items: center;
+  }
+  .banner {
+  /* border: 1px dashed #CB3B54; */
+    background: var(--clr-white);
+    padding: 4rem 0;
+    border-radius: var(--radius);
+    box-shadow: var(--light-shadow);
+    text-align: center;
+    width: 90vw;
+    max-width: var(--fixed-width);
+  }
+  .modal-btn {
+  /*border: 1px dashed #7EB2ED;*/
+    margin-top: 2rem;
+    background: var(--clr-primary-5);
+    border-color: var(--clr-primary-5);
+    color: var(--clr-white);
+  }
+  .modal-btn:hover {
+  /*border: 1px dashed #022E8D;*/
+    background: transparent;
+    color: var(--clr-primary-5);
+  }
+  /* HIDDEN BY DEFAULT */
+  .modal-overlay {
+  /* border: 1px dashed #127743; */
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(73, 166, 233, 0.5);
+    display: grid;
+    place-items: center;
+    transition: var(--transition);
+    /*these css rules hide the modal*/
+    visibility: hidden;
+    z-index: -10;
+  }
+  /* OPEN/CLOSE MODAL ON CLICKED */
+  .open-modal {
+  /* border: 1px dashed #94127B; */
+    visibility: visible;
+    z-index: 10;
+  }
+  .modal-container {
+  /* border: 1px dashed #C36406; */
+    background: var(--clr-white);
+    border-radius: var(--radius);
+    width: 90vw;
+    height: 30vh;
+    max-width: var(--fixed-width);
+    text-align: center;
+    display: grid;
+    place-items: center;
+    position: relative;
+  }
+  .close-btn {
+  /*border: 1px dashed #A0B257;*/
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
+    font-size: 2rem;
+    background: transparent;
+    border-color: transparent;
+    color: var(--clr-red-dark);
+    cursor: pointer;
+    transition: var(--transition);
+  }
+  .close-btn:hover {
+  /* border: 1px dashed #A9A82E; */
+    color: var(--clr-red-light);
+    transform: scale(1.3);
+  }
